--- a/platform/mv3/extension/_locales/pl/messages.json
+++ b/platform/mv3/extension/_locales/pl/messages.json
@@ -280,11 +280,11 @@
     "description": "A button to navigate to the blocked page"
   },
   "zapperTipEnter": {
-    "message": "Enter element zapper mode",
+    "message": "Przejdź do trybu usuwania elementów",
     "description": "Tooltip for the button used to enter zapper mode"
   },
   "zapperTipQuit": {
-    "message": "Exit element zapper mode",
+    "message": "Wyjdź z trybu usuwania elementów",
     "description": "Tooltip for the button used to exit zapper mode"
   }
 }
