--- a/platform/mv3/extension/_locales/ka/messages.json
+++ b/platform/mv3/extension/_locales/ka/messages.json
@@ -280,11 +280,11 @@
     "description": "A button to navigate to the blocked page"
   },
   "zapperTipEnter": {
-    "message": "Enter element zapper mode",
+    "message": "ნაწილების ამოჭრის რეჟიმში გადასვლა",
     "description": "Tooltip for the button used to enter zapper mode"
   },
   "zapperTipQuit": {
-    "message": "Exit element zapper mode",
+    "message": "ნაწილების ამოჭრის რეჟიმიდან გასვლა",
     "description": "Tooltip for the button used to exit zapper mode"
   }
 }
