--- a/platform/mv3/extension/_locales/el/messages.json
+++ b/platform/mv3/extension/_locales/el/messages.json
@@ -111,6 +111,10 @@
     "message": "Αναφέρετε προβλήμα φίλτρου για συγκεκριμένους ιστοτόπους στο <span data-url=\"https://github.com/uBlockOrigin/uAssets/issues?q=is%3Aissue\">εργαλείο παρακολούθησης ζητημάτων του <code>uBlockOrigin/uAssets</code></span>. <u>Απαιτείται λογαριασμός GitHub.</u>",
     "description": "First paragraph of 'Filter issues' section in Support pane"
   },
+  "supportS5H": {
+    "message": "Troubleshooting information",
+    "description": "Label of 'Troubleshooting information' section in 'Report a filter issue' page"
+  },
   "supportS6P1S1": {
     "message": "Για να μην επιβαρυνθούν οι εθελοντών με διπλές αναφορές, βεβαιωθείτε ότι το ζήτημα δεν έχει ήδη αναφερθεί.<b>Σημείωση:</b> Με το πάτημα του κουμπιού, θα σταλεί η σελίδα προέλευσης στο GitHub.",
     "description": "A paragraph in the filter issue reporter section"
