--- a/platform/mv3/extension/_locales/fr/messages.json
+++ b/platform/mv3/extension/_locales/fr/messages.json
@@ -111,6 +111,10 @@
     "message": "Rapportez des problèmes de filtre sur des sites Web spécifiques dans le <span data-url=\"https://github.com/uBlockOrigin/uAssets/issues?q=is%3Aissue\"><code>uBlockOrigin/uAssets</code> suivi des problèmes</span>. <u>Nécessite un compte GitHub.</u>",
     "description": "First paragraph of 'Filter issues' section in Support pane"
   },
+  "supportS5H": {
+    "message": "Troubleshooting information",
+    "description": "Label of 'Troubleshooting information' section in 'Report a filter issue' page"
+  },
   "supportS6P1S1": {
     "message": "Pour éviter d'encombrer les contributeurs avec des rapports en double, veuillez vérifier que le problème n'a pas déjà été rapporté.\n<b>Note :</b> Cliquer sur le bouton entraînera l'envoi de la page d'origine à GitHub.",
     "description": "A paragraph in the filter issue reporter section"
