--- a/platform/mv3/extension/_locales/fy/messages.json
+++ b/platform/mv3/extension/_locales/fy/messages.json
@@ -111,6 +111,10 @@
     "message": "Meld filterproblemen mei spesifike websites yn de <span data-url=\"https://github.com/uBlockOrigin/uAssets/issues?q=is%3Aissue\"><code>uBlockOrigin/uAssets</code>-probleemtracker</span>. <u>Fereasket in GitHub-account.</u>",
     "description": "First paragraph of 'Filter issues' section in Support pane"
   },
+  "supportS5H": {
+    "message": "Troubleshooting information",
+    "description": "Label of 'Troubleshooting information' section in 'Report a filter issue' page"
+  },
   "supportS6P1S1": {
     "message": "Kontrolearje oft it probleem net earder meld is om foar te kommen dat frijwilligers mei dûbele meldingen belêst wurde.",
     "description": "A paragraph in the filter issue reporter section"
