--- a/platform/mv3/extension/_locales/hr/messages.json
+++ b/platform/mv3/extension/_locales/hr/messages.json
@@ -111,6 +111,10 @@
     "message": "Prijavite probleme s filtrima s određenim web-lokacijama <span data-url=\"https://github.com/uBlockOrigin/uAssets/issues?q=is%3Aissue\"><code>uBlockOrigin/uAssets</code> alatu za praćenje problema</span>. <u>Potreban je GitHub račun.</u>",
     "description": "First paragraph of 'Filter issues' section in Support pane"
   },
+  "supportS5H": {
+    "message": "Troubleshooting information",
+    "description": "Label of 'Troubleshooting information' section in 'Report a filter issue' page"
+  },
   "supportS6P1S1": {
     "message": "Kako biste izbjegli opterećivanje volontera duplim prijavama, provjerite nije li problem već prijavljen. <b>Napomena:</b> klik na gumb uzrokovat će slanje izvorne stranice na GitHub.",
     "description": "A paragraph in the filter issue reporter section"
