--- a/platform/mv3/extension/_locales/hu/messages.json
+++ b/platform/mv3/extension/_locales/hu/messages.json
@@ -111,6 +111,10 @@
     "message": "Az adott webhelyeket érintő szűrőhibákat a <span data-url=\"https://github.com/uBlockOrigin/uAssets/issues?q=is%3Aissue\"><code>uBlockOrigin/uAssets</code> hibakövetőjében</span> jelentse. <u>Ehhez GitHub-fiók szükséges.</u>",
     "description": "First paragraph of 'Filter issues' section in Support pane"
   },
+  "supportS5H": {
+    "message": "Troubleshooting information",
+    "description": "Label of 'Troubleshooting information' section in 'Report a filter issue' page"
+  },
   "supportS6P1S1": {
     "message": "Az önkéntesek terhelésének csökkentése érdekében győződjön meg róla, hogy a hiba még nem lett jelentve. <b>Megjegyzés:</b> a gombra kattintás azt okozza, hogy a lap eredete el lesz küldve a GitHub részére.",
     "description": "A paragraph in the filter issue reporter section"
