--- a/platform/mv3/extension/_locales/ja/messages.json
+++ b/platform/mv3/extension/_locales/ja/messages.json
@@ -111,6 +111,10 @@
     "message": "<span data-url=\"https://github.com/uBlockOrigin/uAssets/issues?q=is%3Aissue\"><code>uBlockOrigin/uAssets</code> issue tracker</span> で特定のウェブサイトでのフィルターの問題を報告します。<u>GitHub アカウントが必要です</u>",
     "description": "First paragraph of 'Filter issues' section in Support pane"
   },
+  "supportS5H": {
+    "message": "Troubleshooting information",
+    "description": "Label of 'Troubleshooting information' section in 'Report a filter issue' page"
+  },
   "supportS6P1S1": {
     "message": "重複した報告によってボランティアに負担をかけないように、問題がすでに報告されていないか確認してください。 <b>注意:</b> ボタンをクリックすると、ページのオリジンが GitHub に送信されます。",
     "description": "A paragraph in the filter issue reporter section"
