--- a/platform/mv3/extension/_locales/mk/messages.json
+++ b/platform/mv3/extension/_locales/mk/messages.json
@@ -111,6 +111,10 @@
     "message": "Пријавете проблеми со филтерите за специфични веб-страници до <span data-url=\"https://github.com/uBlockOrigin/uAssets/issues?q=is%3Aissue\"><code>uBlockOrigin/uAssets</code> issue tracker</span>. <u>Потребен е GitHub профил.</u>",
     "description": "First paragraph of 'Filter issues' section in Support pane"
   },
+  "supportS5H": {
+    "message": "Troubleshooting information",
+    "description": "Label of 'Troubleshooting information' section in 'Report a filter issue' page"
+  },
   "supportS6P1S1": {
     "message": "За да се избегне оптоварување на волонтерите со дупликат пријави, ве молиме проверете дали проблемот веќе не е пријавен.",
     "description": "A paragraph in the filter issue reporter section"
