--- a/platform/mv3/extension/_locales/ro/messages.json
+++ b/platform/mv3/extension/_locales/ro/messages.json
@@ -111,6 +111,10 @@
     "message": "Raportează aici o eroare cu filtrele pentru un site specific <span data-url=\"https://github.com/uBlockOrigin/uAssets/issues?q=is%3Aissue\"><code>uBlockOrigin/uAssets</code> issue tracker</span>. <u>Este necesar un cont GitHub.</u>",
     "description": "First paragraph of 'Filter issues' section in Support pane"
   },
+  "supportS5H": {
+    "message": "Troubleshooting information",
+    "description": "Label of 'Troubleshooting information' section in 'Report a filter issue' page"
+  },
   "supportS6P1S1": {
     "message": "Pentru a evita încărcarea voluntarilor cu rapoarte duplicate, vă rugăm să verificați dacă problema nu a fost deja raportată.",
     "description": "A paragraph in the filter issue reporter section"
