--- a/platform/mv3/extension/_locales/sk/messages.json
+++ b/platform/mv3/extension/_locales/sk/messages.json
@@ -111,6 +111,10 @@
     "message": "Nahlásenie problémov s filtrom s konkrétnymi webovými stránkami na <span data-url=\"https://github.com/uBlockOrigin/uAssets/issues?q=is%3Aissue\">uBlockOrigin/uAssets</code> issue tracker. Vyžaduje sa GitHub účet.",
     "description": "First paragraph of 'Filter issues' section in Support pane"
   },
+  "supportS5H": {
+    "message": "Troubleshooting information",
+    "description": "Label of 'Troubleshooting information' section in 'Report a filter issue' page"
+  },
   "supportS6P1S1": {
     "message": "Aby ste dobrovoľníkov nezaťažovali duplicitnými hláseniami, overte si, či už problém nebol nahlásený. <b>Poznámka:</b> kliknutím na tlačidlo sa odošle pôvodná stránka na GitHub.",
     "description": "A paragraph in the filter issue reporter section"
