--- a/platform/mv3/extension/_locales/th/messages.json
+++ b/platform/mv3/extension/_locales/th/messages.json
@@ -111,6 +111,10 @@
     "message": "รายงานปัญหาตัวกรองผ่านเว็บไซต์เฉพาะที่ <span data-url=\"https://github.com/uBlockOrigin/uAssets/issues?q=is%3Aissue\"><code>uBlockOrigin/uAssets</code> ปัญหาตัวติดตาม</span>. <u>ต้องใช้บัญชี GitHub</u>",
     "description": "First paragraph of 'Filter issues' section in Support pane"
   },
+  "supportS5H": {
+    "message": "Troubleshooting information",
+    "description": "Label of 'Troubleshooting information' section in 'Report a filter issue' page"
+  },
   "supportS6P1S1": {
     "message": "เพื่อเป็นการลดภาระอาสาสมัครจากการรายงานซ้ำซ้อน โปรดตรวจสอบก่อนว่าปัญหาดังกล่าวได้รับการรายงานไปแล้วหรือยัง <b>หมายเหตุ:</b> คลิกที่ปุ่มจะเป็นการส่งต้นทางของหน้าเว็บไปยัง GitHub",
     "description": "A paragraph in the filter issue reporter section"
