--- a/platform/mv3/extension/_locales/ca/messages.json
+++ b/platform/mv3/extension/_locales/ca/messages.json
@@ -112,7 +112,7 @@
     "description": "First paragraph of 'Filter issues' section in Support pane"
   },
   "supportS5H": {
-    "message": "Troubleshooting information",
+    "message": "Informació de resolució de problemes",
     "description": "Label of 'Troubleshooting information' section in 'Report a filter issue' page"
   },
   "supportS6P1S1": {
