--- a/src/_locales/el/messages.json
+++ b/src/_locales/el/messages.json
@@ -948,7 +948,7 @@
     "description": "First paragraph of 'Bug report' section in Support pane"
   },
   "supportS5H": {
-    "message": "Πληροφορίες αντιμετώπισης προβλημάτων",
+    "message": "Πληροφορίες για αντιμετώπιση προβλημάτων",
     "description": "Header of 'Troubleshooting Information' section in Support pane"
   },
   "supportS5P1": {
