Import translation work from https://crowdin.com/project/ublock

--- a/platform/mv3/extension/_locales/tr/messages.json
+++ b/platform/mv3/extension/_locales/tr/messages.json
@@ -4,7 +4,7 @@
     "description": "extension name."
   },
   "extShortDesc": {
-    "message": "İzin gerektirmeyen içerik engelleyicisi. Kurulumdan hemen sonra reklamları, izleyicileri, ve daha fazlasını engeller.",
+    "message": "A permission-less content blocker. Blocks ads, trackers, miners, and more immediately upon installation.",
     "description": "this will be in the Chrome web store: must be 132 characters or less"
   },
   "perRulesetStats": {
